--- a/netlify_site/index.html
+++ b/netlify_site/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>scratch.utf8</title>
+<title>What happened in 1971?</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
